--- a/home/home.html
+++ b/home/home.html
@@ -9,16 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link href="../상단바/styles/header-sub.css" rel="stylesheet" />
   </head>
   <body>
     <div class="wrapper">
       <!-- 상단바 -->
-      <header>헤드 태그</header>
+      <header></header>
       <div class="container">
         <!-- 상세페이지 -->
         <aside>왼쪽태그</aside>
         <div class="right-content">
-          <nav>nav태그</nav>
+          <div class="nav"></div>
           <!--메인-->
           <main>
             <section class="card-container">
@@ -166,5 +167,6 @@
         </div>
       </div>
     </div>
+    <script src="./home.js"></script>
   </body>
 </html>
