--- a/aside/aside.html
+++ b/aside/aside.html
@@ -65,7 +65,7 @@
                 <!-- Your Videos -->
                 <li>
                     <a href="#">
-                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <svg viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7 5L13 9L7 13V5ZM18 0V18H0V0H18ZM17 1H1V17H17V1Z" fill="white"/>
                         </svg>
                     Your Videos</a>
@@ -102,7 +102,7 @@
             <!-- 구독목록 -->
             <ul class="subscription">
                 
-                <li><div class="title">Subscriptions</a></li>
+                <li class="title">Subscriptions</li>
 
                 <li>
                     <a href="#">
@@ -176,7 +176,7 @@
             </ul>
 
             <ul>
-                <li><div class="title">MORE FROM YOUTUBE</div></li>
+                <li class="title">MORE FROM YOUTUBE</li>
 
                 <!-- Youtube Premium -->
                 <li>
