--- a/home/home.html
+++ b/home/home.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link href="../상단바/styles/header-sub.css" rel="stylesheet" />
+    <link href="../상단바/styles/header-top.css" rel="stylesheet" />
     <link href="../aside/aside.css" rel="stylesheet" />
   </head>
   <body>
@@ -23,147 +24,7 @@
           <div class="nav"></div>
           <!--메인-->
           <main>
-            <section class="card-container">
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./다운로드.png" />
-                <div class="card-content">
-                  <p class="card-title">올린 사람</p>
-                  <div class="card-description">
-                    <p class="card-text1">이미지 내용?</p>
-                    <p class="card-text2">이미지 내용?</p>
-                  </div>
-                </div>
-              </div>
-            </section>
+            <section class="card-container"></section>
           </main>
         </div>
       </div>
