2025-04-22 상단바 css, html 수정

--- a/상단바/header-sub.html
+++ b/상단바/header-sub.html
@@ -22,26 +22,10 @@
         <div class="tab-item">Learning</div>
         <div class="tab-item">Movies</div>
         <div class="tab-item">Trending</div>
-        <div class="tab-item">Recently uploaded</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
-        <div class="tab-item">Extra</div>
       </div>
 
       <button class="scroll-arrow" id="scrollRightBtn">
-        <img src="더보기.png" alt="더보기" class="more-icon" />
+        <img src="./img/더보기.png" alt="더보기" class="more-icon" />
       </button>
     </nav>
 
