--- a/상단바/header-top.html
+++ b/상단바/header-top.html
@@ -10,34 +10,50 @@
   <!-- 상단바 1 -->
   <header class="header-top">
     <div class="left">
-      <img src="assets/burger.png" alt="메뉴" class="icon" />
-      <a href="#" class="logo-button">
-        <img src="assets/youtube logo.png" alt="로고아이콘" class="logo-icon" />
-        <img src="assets/youtube.png" alt="YouTube텍스트" class="logo-text" />
+      <button id="menuBtn" class="icon-button">
+        <img src="./img/burger.png" alt="메뉴" class="icon" />
+      </button>
+      <a href="index.html" class="logo-button">
+        <img src="./img/youtube logo.png" alt="로고아이콘" class="logo-icon" />
+        <img src="./img/youtube.png" alt="YouTube텍스트" class="logo-text" />
       </a>
     </div>
 
     <div class="center">
       <form class="search-form" onsubmit="return false;">
-        <input type="text" class="search-input" placeholder="Search" id="searchInput" />
+        <input
+          type="text"
+          class="search-input"
+          placeholder="Search"
+          id="searchInput"
+        />
         <button class="search-button" id="searchButton">
-          <img src="assets/search.png" alt="검색" class="icon" />
+          <img src="./img/search.png" alt="검색" class="icon" />
         </button>
       </form>
-      <button class="mic-button">
-        <img src="assets/voice.png" alt="음성검색" class="icon" />
+      <button class="mic-button" id="micBtn">
+        <img src="./img/voice.png" alt="음성검색" class="icon" />
       </button>
     </div>
 
     <div class="right">
-      <img src="assets/create.png" alt="업로드" class="icon" />
-      <img src="assets/apps.png" alt="앱" class="icon" />
-      <img src="assets/notice.png" alt="알림" class="icon" />
-      <img src="assets/profile.png" alt="프로필" class="icon" />
+      <button id="createBtn" class="icon-button">
+        <img src="./img/create.png" alt="업로드" class="icon" />
+      </button>
+      <button id="appsBtn" class="icon-button">
+        <img src="./img/apps.png" alt="앱" class="icon" />
+      </button>
+      <button id="noticeBtn" class="icon-button">
+        <img src="./img/notice.png" alt="알림" class="icon" />
+      </button>
+      <button id="profileBtn" class="icon-button">
+        <img src="./img/profile.png" alt="프로필" class="icon" />
+      </button>
     </div>
   </header>
 
   <script>
+    // 검색 기능
     document.getElementById("searchButton").addEventListener("click", function () {
       const keyword = document.getElementById("searchInput").value.trim();
       if (keyword) {
@@ -45,6 +61,28 @@
       } else {
         alert("검색어를 입력하세요!");
       }
+    });
+
+    // 각 버튼 테스트용 이벤트 (추후 실제 기능 연결)
+
+    document.getElementById("menuBtn").addEventListener("click", () => {
+      alert("☰ 메뉴 클릭됨 (예: 사이드바 열기)");
+    });
+
+    document.getElementById("createBtn").addEventListener("click", () => {
+      alert("📤 업로드 버튼 클릭됨");
+    });
+
+    document.getElementById("appsBtn").addEventListener("click", () => {
+      alert("📦 앱 버튼 클릭됨");
+    });
+
+    document.getElementById("noticeBtn").addEventListener("click", () => {
+      alert("🔔 알림 클릭됨");
+    });
+
+    document.getElementById("profileBtn").addEventListener("click", () => {
+      alert("👤 프로필 클릭됨");
     });
   </script>
 </body>
