--- a/상단바/header-top.html
+++ b/상단바/header-top.html
@@ -10,14 +10,14 @@
     <!-- 상단바 1 -->
     <header class="header-top">
       <div class="left">
-        <img src="./img/burger.png" alt="메뉴" class="icon" />
+        <img src="../home/img/burger.png" alt="메뉴" class="icon" />
         <a href="#" class="logo-button">
           <img
-            src="./img/youtube logo.png"
+            src="../home/img/youtube logo.png"
             alt="로고아이콘"
             class="logo-icon"
           />
-          <img src="./img/youtube.png" alt="YouTube텍스트" class="logo-text" />
+          <img src="../home/img/youtube.png" alt="YouTube텍스트" class="logo-text" />
         </a>
       </div>
 
@@ -30,19 +30,19 @@
             id="searchInput"
           />
           <button class="search-button" id="searchButton">
-            <img src="./img/search.png" alt="검색" class="icon" />
+            <img src="../home/img/search.png" alt="검색" class="icon" />
           </button>
         </form>
         <button class="mic-button">
-          <img src="./img/voice.png" alt="음성검색" class="icon" />
+          <img src="../home/img/voice.png" alt="음성검색" class="icon" />
         </button>
       </div>
 
       <div class="right">
-        <img src="./img/create.png" alt="업로드" class="icon" />
-        <img src="./img/apps.png" alt="앱" class="icon" />
-        <img src="./img/notice.png" alt="알림" class="icon" />
-        <img src="./img/profile.png" alt="프로필" class="icon" />
+        <img src="../home/img/create.png" alt="업로드" class="icon" />
+        <img src="../home/img/apps.png" alt="앱" class="icon" />
+        <img src="../home/img/notice.png" alt="알림" class="icon" />
+        <img src="../home/img/profile.png" alt="프로필" class="icon" />
       </div>
     </header>
 
