--- a/Channel/channel-smallvideo.html
+++ b/Channel/channel-smallvideo.html
@@ -10,7 +10,11 @@
 
   <section class="featured-video">
     <div class="video-preview">
-      <img src="img/Youtube player.png" alt="대표 비디오 썸네일" class="video-thumb" />
+      <video id="main-video" class="video-thumb" muted>
+        <source src="wave.mp4" type="video/mp4" />
+        브라우저가 video 태그를 지원하지 않습니다.
+      </video>
+      <div class="custom-play-button" id="play-button">▶</div>
     </div>
     <div class="video-description">
       <h2>Blind Woodturner: Turning passion into fine art</h2>
@@ -21,6 +25,18 @@
       </p>
     </div>
   </section>
-
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const video = document.getElementById("main-video");
+      const playBtn = document.getElementById("play-button");
+  
+      playBtn.addEventListener("click", () => {
+        video.play();
+        playBtn.style.display = "none";
+        video.setAttribute("controls", true); // 재생 후 controls 표시
+      });
+    });
+  </script>
+  
 </body>
 </html>
