채널 페이지 통합

--- a/Channel/channel-playlist.html
+++ b/Channel/channel-playlist.html
@@ -8,17 +8,8 @@
   <link rel="stylesheet" href="./styles/channel-playlist.css" />
 </head>
 <body>
-
-  <div id="top-navbar"></div>
-
   <div class="layout">
-    <aside id="left-sidebar"></aside>
-
     <div class="main-content">
-      <header class="channel-header">
-        <!-- 배너 및 채널 정보 동일 -->
-      </header>
-
       <section class="playlist-section">
         <div class="playlist-header">
           <h3>Search On '21</h3>
@@ -28,7 +19,7 @@
           <!-- 반복되는 카드들 -->
           <a href="https://www.youtube.com/watch?v=video_id_1" target="_blank" class="playlist-card">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -39,7 +30,7 @@
 
           <a href="https://www.youtube.com/watch?v=video_id_2" target="_blank" class="playlist-card">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -50,7 +41,7 @@
 
           <a href="https://www.youtube.com/watch?v=video_id_3" target="_blank" class="playlist-card">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -63,7 +54,7 @@
             <!-- 반복되는 카드들 -->
             <a href="https://www.youtube.com/watch?v=video_id_1" target="_blank" class="playlist-card">
               <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+                <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
                 <div class="play-icon-overlay">▶</div>
               </div>
               <div class="playlist-text">
@@ -74,7 +65,7 @@
   
             <a href="https://www.youtube.com/watch?v=video_id_2" target="_blank" class="playlist-card">
               <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+                <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
                 <div class="play-icon-overlay">▶</div>
               </div>
               <div class="playlist-text">
@@ -85,7 +76,7 @@
   
             <a href="https://www.youtube.com/watch?v=video_id_3" target="_blank" class="playlist-card">
               <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+                <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
                 <div class="play-icon-overlay">▶</div>
               </div>
               <div class="playlist-text">
@@ -96,8 +87,6 @@
         </div>
       </section>
     </div>
-  </div>
-
-  <script src="scripts.js"></script>
+  </div>  
 </body>
 </html>
