--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles/channel.css" rel="stylesheet" />
 </head>
 <body>
     <div class="wrapper">
         <!-- 상단바 -->
         <header></header>
-
         <!-- 상세페이지 + 메인 -->
         <div class="container">
-        <!-- 상세페이지 -->
-        <aside></aside>       
+            <!-- 상세페이지 -->
+            <aside></aside>       
             <!--메인-->
             <main>
                 <section class="card-container">
@@ -26,6 +26,6 @@
         </div>
     </div>
     <script src="../home/loadHTML.js"></script>       
-    <script src="channel.js"></script>      
+    <script src="./channel.js"></script>      
 </body>
 </html>
