상단바 수정

--- a/home/상단바/header-sub.html
+++ b/home/상단바/header-sub.html
@@ -15,9 +15,11 @@
       <div class="tab-item">Movies</div>        
       <div class="tab-item">Trending</div>
 
+      <!-- 상단바 ">"" 이미지 버튼
       <button class="scroll-arrow" id="scrollRightBtn">
         <img src="../img/더보기.png" alt="더보기" class="more-icon" />          
       </button>           
+      -->
     </div>           
   </nav>    
 </body>
