--- a/videos/videos.html
+++ b/videos/videos.html
@@ -14,6 +14,7 @@
   <div class="wrapper">
     <!-- 상단바 -->
     <header></header>
+    <aside></aside>
     <main class="main-layout">
       <!-- 플레이어 -->
       <section class="video-section">
