home nav html 수정

--- a/home/상단바/header-sub.html
+++ b/home/상단바/header-sub.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="header-sub">
       <button class="scroll-arrow left" id="scrollLeftBtn">
-        <img src="../img/더보기.png" alt="왼쪽" class="more-icon" />
+        <img src="../img/더보기(왼).png" alt="왼쪽" class="more-icon" />
       </button>
 
       <div class="scroll-container" id="scrollContainer">
