동영상 크기 조절 및 추천영상 영역 재배치(수정필요)

--- a/videos/videos.html
+++ b/videos/videos.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="videos.css"/>
-    <link href="../상단바/styles/header-top.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../home/상단바/styles/header-top.css"/>
     <script src="videos.js" defer></script>
 </head>
 <body>
