채널 페이지 수정

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -25,7 +25,8 @@
             </div>
         </div>
     </div>
-    <script src="../home/loadHTML.js"></script>       
+    <script src="../home/loadHTML.js"></script>  
+    <script src="./channel1315.js"></script>     
     <script src="./channel.js"></script>      
 </body>
 </html>
