--- a/videos/videos.html
+++ b/videos/videos.html
@@ -78,7 +78,7 @@
           </p>
         </section>
       
-        <section class="comment-section">
+        <!-- <section class="comment-section">
           <h3>댓글 <span id="comment-count">0</span>개</h3>
           <div class="comment-input">
             <input type="text" id="comment-input" placeholder="댓글을 입력하세요..." />
@@ -86,7 +86,7 @@
           </div>
           <ul id="comment-list" class="comment-list"></ul>
         </section>
-      </section>
+      </section> -->
 
       <!-- 추천영상 -->
       <aside class="related-videos">
@@ -105,6 +105,15 @@
           </div>
         </div>
       </aside>
+      <section class="comment-section">
+        <h3>댓글 <span id="comment-count">0</span>개</h3>
+        <div class="comment-input">
+          <input type="text" id="comment-input" placeholder="댓글을 입력하세요..." />
+          <button id="submit-comment">작성</button>
+        </div>
+        <ul id="comment-list" class="comment-list"></ul>
+      </section>
+    </section>
     </main>
   </div>
   <script src="../home/loadHTML.js"></script>
