유튜브 아이콘 누르면 메인페이지로 가기

--- a/home/상단바/header-top.html
+++ b/home/상단바/header-top.html
@@ -6,7 +6,7 @@
       <img src="../img/burger.png" alt="메뉴" class="icon" />
     </button>
     
-    <a href="#" class="logo-button">
+    <a href="../home/home.html" class="logo-button">
       <img  src="../img/youtube-Logo.png" alt="로고아이콘" class="logo-icon" />     
     </a>
   </div>
