--- a/videos/videos.html
+++ b/videos/videos.html
@@ -78,7 +78,36 @@
           </p>
         </section>
       
-        <!-- <section class="comment-section">
+          <!-- <section class="comment-section">
+            <h3>댓글 <span id="comment-count">0</span>개</h3>
+            <div class="comment-input">
+              <input type="text" id="comment-input" placeholder="댓글을 입력하세요..." />
+              <button id="submit-comment">작성</button>
+            </div>
+            <ul id="comment-list" class="comment-list"></ul>
+          </section>
+        </section> -->
+
+        <!-- 추천영상 -->
+        <aside class="related-videos1">
+          <div class="related-video">
+            <img src="../Profile/2025 HBD MOKOKO_Profile_02.jpg" alt="썸네일">
+            <div class="video-text">
+              <h4>제목2</h4>
+              <p>텍스트2</p>
+            </div>
+          </div>
+          <div class="related-video">
+            <img src="../Profile/2025 HBD MOKOKO_Profile_03.jpg" alt="썸네일">
+            <div class="video-text">
+              <h4>제목3</h4>
+              <p>텍스트3</p>
+            </div>
+          </div>
+        </aside>
+
+        <!-- 댓글 -->
+        <section class="comment-section">
           <h3>댓글 <span id="comment-count">0</span>개</h3>
           <div class="comment-input">
             <input type="text" id="comment-input" placeholder="댓글을 입력하세요..." />
@@ -86,10 +115,9 @@
           </div>
           <ul id="comment-list" class="comment-list"></ul>
         </section>
-      </section> -->
+      </section>
 
-      <!-- 추천영상 -->
-      <aside class="related-videos">
+      <aside class="related-videos2">
         <div class="related-video">
           <img src="../Profile/2025 HBD MOKOKO_Profile_02.jpg" alt="썸네일">
           <div class="video-text">
@@ -104,16 +132,8 @@
             <p>텍스트3</p>
           </div>
         </div>
-      </aside>
-      <section class="comment-section">
-        <h3>댓글 <span id="comment-count">0</span>개</h3>
-        <div class="comment-input">
-          <input type="text" id="comment-input" placeholder="댓글을 입력하세요..." />
-          <button id="submit-comment">작성</button>
-        </div>
-        <ul id="comment-list" class="comment-list"></ul>
-      </section>
-    </section>
+      </aside> 
+
     </main>
   </div>
   <script src="../home/loadHTML.js"></script>
