--- a/Channel/channel-playlist.html
+++ b/Channel/channel-playlist.html
@@ -8,27 +8,18 @@
   <link rel="stylesheet" href="./styles/channel-playlist.css" />
 </head>
 <body>
-
-  <div id="top-navbar"></div>
-
   <div class="layout">
-    <aside id="left-sidebar"></aside>
-
     <div class="main-content">
-      <header class="channel-header">
-        <!-- 배너 및 채널 정보 동일 -->
-      </header>
-
       <section class="playlist-section">
         <div class="playlist-header">
           <h3>Search On '21</h3>
           <button class="play-all-btn">▶ PLAY ALL</button>
         </div>
         <div class="playlist-grid">
-          <!-- 반복되는 카드들 -->
-          <a href="https://www.youtube.com/watch?v=video_id_1" target="_blank" class="playlist-card">
+          <!-- 반복 카드 -->
+          <a href="https://www.youtube.com/watch?v=video_id_1" class="playlist-card" target="_blank">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -37,9 +28,9 @@
             </div>
           </a>
 
-          <a href="https://www.youtube.com/watch?v=video_id_2" target="_blank" class="playlist-card">
+          <a href="https://www.youtube.com/watch?v=video_id_2" class="playlist-card" target="_blank">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -48,9 +39,9 @@
             </div>
           </a>
 
-          <a href="https://www.youtube.com/watch?v=video_id_3" target="_blank" class="playlist-card">
+          <a href="https://www.youtube.com/watch?v=video_id_3" class="playlist-card" target="_blank">
             <div class="video-preview">
-              <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
               <div class="play-icon-overlay">▶</div>
             </div>
             <div class="playlist-text">
@@ -59,45 +50,42 @@
             </div>
           </a>
 
-          <div class="playlist-grid">
-            <!-- 반복되는 카드들 -->
-            <a href="https://www.youtube.com/watch?v=video_id_1" target="_blank" class="playlist-card">
-              <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
-                <div class="play-icon-overlay">▶</div>
-              </div>
-              <div class="playlist-text">
-                <p>모코코</p>
-                <p>Chris Fisher · 576K views · 3 weeks ago</p>
-              </div>
-            </a>
-  
-            <a href="https://www.youtube.com/watch?v=video_id_2" target="_blank" class="playlist-card">
-              <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
-                <div class="play-icon-overlay">▶</div>
-              </div>
-              <div class="playlist-text">
-                <p>Rebuilding a Vintage Camera Lens</p>
-                <p>Fixing Things · 120K views · 2 weeks ago</p>
-              </div>
-            </a>
-  
-            <a href="https://www.youtube.com/watch?v=video_id_3" target="_blank" class="playlist-card">
-              <div class="video-preview">
-                <img src="img/mokoko.jpg" alt="썸네일" class="thumb-img" />
-                <div class="play-icon-overlay">▶</div>
-              </div>
-              <div class="playlist-text">
-                <p>모코코</p>
-                <p>Blade Master · 890K views · 1 month ago</p>
-              </div>
-            </a>
+          <a href="https://www.youtube.com/watch?v=video_id_4" class="playlist-card" target="_blank">
+            <div class="video-preview">
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <div class="play-icon-overlay">▶</div>
+            </div>
+            <div class="playlist-text">
+              <p>Rebuilding a Vintage Camera Lens</p>
+              <p>Fixing Things · 120K views · 2 weeks ago</p>
+            </div>
+          </a>
+
+          <a href="https://www.youtube.com/watch?v=video_id_5" class="playlist-card" target="_blank">
+            <div class="video-preview">
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <div class="play-icon-overlay">▶</div>
+            </div>
+            <div class="playlist-text">
+              <p>모코코</p>
+              <p>Chris Fisher · 576K views · 3 weeks ago</p>
+            </div>
+          </a>
+
+          <a href="https://www.youtube.com/watch?v=video_id_6" class="playlist-card" target="_blank">
+            <div class="video-preview">
+              <img src="../img/mokoko.jpg" alt="썸네일" class="thumb-img" />
+              <div class="play-icon-overlay">▶</div>
+            </div>
+            <div class="playlist-text">
+              <p>Blade Master Showcase</p>
+              <p>Blade Master · 890K views · 1 month ago</p>
+            </div>
+          </a>
+          
         </div>
       </section>
     </div>
-  </div>
-
-  <script src="scripts.js"></script>
+  </div>  
 </body>
 </html>
