--- a/home/home.html
+++ b/home/home.html
@@ -37,7 +37,11 @@
     <!--로드-->
     <script src="./loadHTML.js"></script>   
     <!--1315 미만일때-->
-    <script src="./home1315.js"></script>        
+    <script src="./home1315.js"></script>  
+    <!-- 채널 정보 -->
+    <script src="../api/getChannelInfo.js"></script>      
+    <!-- 총 영상 정보 -->
+    <script src="../api/getVideoList.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
