--- a/videos/videos.html
+++ b/videos/videos.html
@@ -19,7 +19,7 @@
       <!-- 플레이어 -->
       <section class="video-section">
         <div class="video-player">
-          <iframe src="https://www.youtube.com/embed/2g811Eo7K8U" allowfullscreen></iframe>
+          <iframe id="player" src="https://storage.googleapis.com/youtube-clone-video/1.mp4" allowfullscreen></iframe>
         </div>
       
         <h2 class="video-title">Blind Woodturner: Turning passion into fine art</h2>
