--- a/home/home.html
+++ b/home/home.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />    
     <link href="./상단바/styles/header-sub.css" rel="stylesheet" />
     <link href="./상단바/styles/header-top.css" rel="stylesheet" />
-    <link href="./sidebar/style/aside.css" rel="stylesheet" />  
+    <link href="./sidebar/style/aside.css" rel="stylesheet" />    
   </head>
   <body>
     <div class="wrapper">
@@ -37,8 +37,11 @@
     <!--로드-->
     <script src="./loadHTML.js"></script>   
     <!--1315 미만일때-->
-    <script src="./home1315.js"></script>        
+    <script src="./home1315.js"></script>  
+    <!-- 채널 정보 -->
+    <script src="../api/getChannelInfo.js"></script>      
+    <!-- 총 영상 정보 -->
+    <script src="../api/getVideoList.js"></script>
     <script src="./home.js"></script>   
-    <script src="./search.js"></script> 
   </body>
 </html>
