--- a/videos/videos.html
+++ b/videos/videos.html
@@ -77,6 +77,24 @@
             고양이가 점프하다가 넘어지는 영상이에요
           </p>
         </section>
+
+        <!--- 추천영상 밑 정렬 -->
+        <aside class="related-videos1">
+          <div class="related-video">
+            <img src="../Profile/2025 HBD MOKOKO_Profile_02.jpg" alt="썸네일">
+            <div class="video-text">
+              <h4>제목2</h4>
+              <p>텍스트2</p>
+            </div>
+          </div>
+          <div class="related-video">
+            <img src="../Profile/2025 HBD MOKOKO_Profile_03.jpg" alt="썸네일">
+            <div class="video-text">
+              <h4>제목3</h4>
+              <p>텍스트3</p>
+            </div>
+          </div>
+        </aside>      
       
         <section class="comment-section">
           <h3>댓글 <span id="comment-count">0</span>개</h3>
@@ -86,10 +104,10 @@
           </div>
           <ul id="comment-list" class="comment-list"></ul>
         </section>
-      </section>
+      </section> 
 
-      <!-- 추천영상 -->
-      <aside class="related-videos">
+      <!-- 추천영상 오른쪽 정렬 -->
+      <aside class="related-videos2">
         <div class="related-video">
           <img src="../Profile/2025 HBD MOKOKO_Profile_02.jpg" alt="썸네일">
           <div class="video-text">
@@ -104,7 +122,7 @@
             <p>텍스트3</p>
           </div>
         </div>
-      </aside>
+      </aside>      
     </main>
   </div>
   <script src="../home/loadHTML.js"></script>
