--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="styles/channel.css" rel="stylesheet" />
+    <link href="styles/channel.css" rel="stylesheet" />    
 </head>
 <body>
     <div class="wrapper">
@@ -17,7 +17,9 @@
             <!--메인-->
             <main>
                 <section class="card-container">
-                    <div class="header"></div>
+                    <div class="header">
+
+                    </div>
                     <div class="main"></div>
                     <div class="footer"></div>
                 </section>
@@ -25,10 +27,12 @@
             </div>
         </div>
     </div>
-    <script src="../home/loadHTML.js"></script>  
-    <script src="./channel1315.js"></script>
+    <script src="../js/loadHTML.js"></script>     
+    <script src="../js/page1315px.js"></script>
+    <script src="../sidebar/sidebar.js"></script>
     <script src="../api/getChannelVideoList.js"></script>  
     <script src="../api/getChannelInfo.js"></script>
+    <script src="/js/getTimeAgo.js"></script>
     <script src="./channel.js"></script>      
 </body>
 </html>
