--- a/home/home.html
+++ b/home/home.html
@@ -12,9 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />    
-    <link href="./상단바/styles/header-sub.css" rel="stylesheet" />
-    <link href="./상단바/styles/header-top.css" rel="stylesheet" />
-    <link href="./sidebar/style/aside.css" rel="stylesheet" />    
+    
   </head>
   <body>
     <div class="wrapper">
@@ -35,13 +33,14 @@
       </div>
     </div>     
     <!--로드-->
-    <script src="./loadHTML.js"></script>   
+    <script src="../js/loadHTML.js"></script>   
     <!--1315 미만일때-->
-    <script src="./home1315.js"></script>  
+    <script src="../js/page1315px.js"></script>    
     <!-- 채널 정보 -->
     <script src="../api/getChannelInfo.js"></script>      
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
+    <script src="../sidebar/sidebar.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
