비디오 js,html 수정

--- a/videos/videos.html
+++ b/videos/videos.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <!-- 상단바 -->
     <header></header>
-    <aside></aside>
+    <aside class="aside"></aside>
     <main class="main-layout">
       <!-- 플레이어 -->
       <section class="video-section">
@@ -125,7 +125,8 @@
       </aside>      
     </main>
   </div>
-  <script src="../home/loadHTML.js"></script>
-  <script src="videos.js" defer></script>  
+  <script src="/js/loadHTML.js"></script> 
+  <script src="/sidebar/sidebar.js"></script>  
+  <script src="/videos/videos.js"></script>  
 </body>
 </html>
