--- a/sidebar/html/aside.html
+++ b/sidebar/html/aside.html
@@ -70,7 +70,7 @@
           Show More</a>
       </li>
     </ul>
-
+    <div class="viewBox"></div>
     <!-- 구독목록 -->
     <ul class="subscription">
       <li class="title">Subscriptions</li>
