변경전 커밋

--- a/home/home.html
+++ b/home/home.html
@@ -25,6 +25,7 @@
       <div class="container">
         <!-- 상세페이지 -->
         <aside></aside>
+        <div style="height: 100%; width: 190px;"></div>
         <div class="right-content">
           <div class="nav"></div>
           <!--메인-->
