채널 페이지 및 js 수정

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -33,6 +33,7 @@
     <script src="../api/getChannelVideoList.js"></script>  
     <script src="../api/getChannelInfo.js"></script>
     <script src="/js/getTimeAgo.js"></script>
-    <script src="./channel.js"></script>      
+    <script src="../js/getChannelEverything.js"></script>
+    <script src="./channel.js"></script>       
 </body>
 </html>
