--- a/Channel/html/channel-title.html
+++ b/Channel/html/channel-title.html
@@ -16,7 +16,7 @@
       </a>
       <div class="text-info">
         <h1 class="channel-name" id="channel-name"></h1>
-        <p class="subscribers">4.2M subscribers</p>
+        <p class="subscribers" id="subscribers"> subscribers</p>
       </div>
       <button id="subscribe-btn" class="subscribe-btn">SUBSCRIBES</button>
     </div>
