메인 페이지 js, css, html 수정

--- a/home/home.html
+++ b/home/home.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />    
-    
   </head>
   <body>
     <div class="wrapper">
@@ -23,8 +22,10 @@
       <div class="container">
         <!-- 상세페이지 -->
         <aside></aside>
+        <div class="sidebarExpanded"></div>
         <div class="right-content">
           <div class="nav"></div>
+          
           <!--메인-->
           <main>
             <section class="card-container"></section>
