--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,6 +114,7 @@
       });
     });
   </script>
+  <script src="./channel.js"></script>
   <script src="../js/page1315px.js"></script>
   <script src="../api/getChannelInfo.js"></script>
   <script src="../api/getVideoList.js"></script>
