검색페이지 수정중

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -6,7 +6,7 @@
   <title>채널 페이지 - Mongsildan</title>
 
   <!-- CSS 링크 -->
-  <link rel="stylesheet" href="./styles/channel.css" />
+  <link rel="stylesheet" href="./channel.css" />
   <link rel="stylesheet" href="../top/style/header-top.css" />
   <link rel="stylesheet" href="../sidebar/style/aside.css" />
   
